--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -2,11 +2,11 @@
 # necessary for operation to minimize the size of containers
 
 # For LLM Access
-langchain-anthropic>=0.3.11,<0.4
-langchain-aws>=0.2.27,<0.3
-langchain-google-genai>=2.1.8,<3.0
-langchain-nvidia-ai-endpoints>=0.3.8,<0.4
-langchain-ollama>=0.3.4,<0.4
+langchain-anthropic>=0.3.11,<1.1
+#langchain-aws>=0.2.27,<1.1
+langchain-google-genai>=2.1.8,<3.1
+#langchain-nvidia-ai-endpoints>=0.3.8,<0.4
+langchain-ollama>=0.3.4,<1.1
 
 # Tests
 pytest==8.3.3
