Upgrade pylint and flake8

--- a/.pylintrc
+++ b/.pylintrc
@@ -27,7 +27,7 @@ max-line-length=120
 
 # When enabled, pylint would attempt to guess common misconfiguration and emit
 # user-friendly hints instead of false-positive error messages.
-suggestion-mode=yes
+#suggestion-mode=yes
 
 # Disable the message, report, category or checker with the given id(s). You
 # can either give multiple identifiers separated by comma (,) or put this
