Fix Dockerfile and fallbacks example

--- a/neuro_san/deploy/Dockerfile
+++ b/neuro_san/deploy/Dockerfile
@@ -248,11 +248,11 @@ ENV AGENT_EXTERNAL_SERVER_URL=""
 # When not set, this defaults to a null implementation.
 # A simple default implementation is provided by the class
 # "neuro_san.service.watcher.temp_networks.s3_reservations_storage.S3ReservationsStorage"
-ENV AGENT_EXTERNAL_RESERVATIONS_STORAGE
+ENV AGENT_EXTERNAL_RESERVATIONS_STORAGE=""
 
 # When the AGENT_EXTERNAL_RESERVATIONS_STORAGE (immediately above) is set to the
 # S3ReservationsStorage class mentioned there, this env var must be set to the S3 Bucket
 # to use for cross-pod reservations storage.
-ENV AGENT_RESERVATIONS_S3_BUCKET
+ENV AGENT_RESERVATIONS_S3_BUCKET=""
 
 ENTRYPOINT "${APP_ENTRYPOINT}"
