Pin leaf-common to 1.2.32

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 # requirements-build.txt
 
 # In-house dependencies
-leaf-common>=1.2.32
+leaf-common==1.2.32
 leaf-server-common>=0.1.23
 
 # These are needed for generating code from .proto files and for the
