--- a/neuro_san/deploy/Dockerfile
+++ b/neuro_san/deploy/Dockerfile
@@ -140,7 +140,8 @@ ENV AWS_SECRET_ACCESS_KEY=""
 ENV ANTHROPIC_API_KEY=""
 
 # MicroSoft Azure/OpenAI access
-ENV AZURE_OPENAI_API_KEY=""
+# OPENAI_API_KEY is a fallback for AZURE_OPENAI_API_KEY
+# ENV AZURE_OPENAI_API_KEY=""
 ENV AZURE_OPENAI_ENDPOINT=""
 
 # Google/Gemini access
